# Job_search

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
data/: vacancies_save.json
src/: base_file_handler.py  base_file_processor.py  exception.py  external_api.py  head_hunter_api.py  hh.py  json_handler.py  json_processor.py  parser.py  parser_api.py  utils.py  vacancy.py
tests/: conftest.py  test_external_api.py  test_head_hunter_api.py  test_json_handler.py  test_utils.py  test_vacancy.py
